crates/toml_edit/tests/snapshots/invalid/float/exp-dot-03.stderr
TOML parse error at line 1, column 16
  |
1 | exp-dot-03 = 3.e+20
  |                ^
invalid fraction, expected digits
